# RS2ChatGPTBots

./: .gitattributes  .gitignore  CGBMacros.uci  README.md  coverage.xml
.github/: dependabot.yml
.github/pages/: index.html
.github/workflows/: codeql.yml  publish-gh-pages.yml  purge-readme-images.yml  python-build-and-test.yml
Classes/: CGBBroadcastHandler.uc  CGBHttpSock.uc  CGBMutatorConfig.uc  CGBProxy.uc  ChatGPTBotsMutator.uc
Config/: ROMutator_ChatGPTBots.ini  ROMutator_ChatGPTBotsConfig.ini
chatgpt_proxy/: .gitignore  README.md  __init__.py  app.py  db.sql  gen_api_key.py  pyproject.toml  pytest.ini  ruff.toml
chatgpt_proxy/auth/: auth.py
chatgpt_proxy/chatgpt_proxy/: __init__.py  app.py  gen_api_key.py
chatgpt_proxy/chatgpt_proxy/auth/: __init__.py  auth.py
chatgpt_proxy/chatgpt_proxy/cache/: __init__.py  cache.py
chatgpt_proxy/chatgpt_proxy/common/: __init__.py  common.py
chatgpt_proxy/chatgpt_proxy/db/: __init__.py  db.py  db.sql  models.py  queries.py
chatgpt_proxy/chatgpt_proxy/log/: __init__.py  log.py
chatgpt_proxy/chatgpt_proxy/steam/: __init__.py  steam.py
chatgpt_proxy/chatgpt_proxy/tests/: README.md  client.py  monkey_patch.py  seed.sql  setup.py  test_api.py  test_gen_api_key.py  test_general.py  test_maintenance.py  test_markdown_gen.py  test_models.py  test_queries.py
chatgpt_proxy/chatgpt_proxy/types/: __init__.py  types.py
chatgpt_proxy/chatgpt_proxy/utils/: __init__.py  utils.py
chatgpt_proxy/db/: db.sql  queries.py
chatgpt_proxy/utils/: __init__.py  utils.py
cov_html/: class_index.html  function_index.html  index.html  status.json  z_043fdb91eeedb54a___init___py.html  z_043fdb91eeedb54a_client_py.html  z_043fdb91eeedb54a_monkey_patch_py.html  z_043fdb91eeedb54a_setup_py.html  z_043fdb91eeedb54a_test_api_py.html  z_043fdb91eeedb54a_test_gen_api_key_py.html  z_043fdb91eeedb54a_test_general_py.html  z_043fdb91eeedb54a_test_maintenance_py.html  z_043fdb91eeedb54a_test_markdown_gen_py.html  z_043fdb91eeedb54a_test_models_py.html  z_05a5ccc5170bcd3a___init___py.html  z_05a5ccc5170bcd3a_steam_py.html  z_2954b0547d1aec56___init___py.html  z_2954b0547d1aec56_types_py.html  z_4c1d1092c5bff932___init___py.html  z_4c1d1092c5bff932__version_py.html  z_4c1d1092c5bff932_app_py.html  z_4c1d1092c5bff932_gen_api_key_py.html  z_706e4cdfdb2edf69___init___py.html  z_706e4cdfdb2edf69_auth_py.html  z_bb3d2287c94ce37d___init___py.html  z_bb3d2287c94ce37d_log_py.html  z_e80a850c563fe90f___init___py.html  z_e80a850c563fe90f_utils_py.html  z_f5eeb0f9bb84992b___init___py.html  z_f5eeb0f9bb84992b_db_py.html  z_f5eeb0f9bb84992b_models_py.html  z_f5eeb0f9bb84992b_queries_py.html  z_fa56c7c58fa9b4d5___init___py.html  z_fa56c7c58fa9b4d5_cache_py.html
