[project]
name = "chatgpt-proxy"
dynamic = ["version"]
description = "ChatGPT proxy server for UnrealScript / UE3 bots."
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]

# TODO: Waiting for Windows support for valkey-glide to be able to use
# the latest versions of aiocache!
# See:
# https://github.com/valkey-io/valkey-glide/issues/3780
# https://github.com/aio-libs/aiocache/issues/1018

dependencies = [
    "aiocache[redis]>=0.12.3",
    "asyncpg>=0.30.0",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.88.0",
    "py-markdown-table>=1.3.0",
    "pyjwt>=2.10.1",
    "pypika>=0.48.9",
    "redis[hiredis]>=6.2.0",
    "sanic[ext]>=25.3.0",
    "ujson>=5.10.0",
    "winloop>=0.2.1 ; platform_system == 'Windows'",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "chatgpt_proxy/_version.py"

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "mypy>=1.16.1",
    "nest-asyncio>=1.6.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-loguru>=0.4.0",
    "respx>=0.22.0",
    "ruff>=0.12.0",
    "sanic-testing>=24.6.0",
    "uv-dynamic-versioning>=0.8.2",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "chatgpt_proxy/tests"
]

# https://github.com/MagicStack/asyncpg/issues/387
# https://github.com/MagicStack/asyncpg/pull/577
[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pypika.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sanic_testing.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pytest_loguru.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "aiocache.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "nest_asyncio.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "py_markdown_table.*",
]
ignore_missing_imports = true
