[project]
name = "chatgpt-proxy"
dynamic = ["version"]
description = "ChatGPT proxy server for UnrealScript / UE3 bots."
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]

# TODO: Waiting for Windows support for valkey-glide to be able to use
# the latest versions of aiocache!
# See:
# https://github.com/valkey-io/valkey-glide/issues/3780
# https://github.com/aio-libs/aiocache/issues/1018

# TODO: asyncpg-stubs version must match asyncpg version
#   exactly! This is currently not forced! Fix me!
dependencies = [
    "aiocache[redis,msgpack]>=0.12.3",
    "asyncpg>=0.31.0",
    "asyncpg-stubs>=0.31.0",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.26.0",
    "py-markdown-table>=1.3.0",
    "pyjwt>=2.11.0",
    "pypika>=0.51.1",
    "redis[hiredis]>=7.1.0",
    "sanic[ext]>=25.12.0",
    "ujson>=5.11.0",
    "winloop>=0.5.0 ; platform_system == 'Windows'",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

# https://github.com/dependabot/dependabot-core/issues/12340
[tool.hatch.version.raw-options]
fallback_version = "0.0.0-unknown"

[tool.hatch.build.hooks.version]
path = "chatgpt_proxy/_version.py"

[dependency-groups]
dev = [
    "genbadge[tests,coverage]>=1.1.3",
    "hatch>=1.16.5",
    "mypy>=1.20.1",
    "nest-asyncio>=1.6.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-loguru>=0.4.0",
    "pytest-timeout>=2.4.0",
    "pytest>=9.0.3",
    "respx>=0.22.0",
    "ruff>=0.15.5",
    "sanic-testing>=24.6.0",
    "uv-dynamic-versioning>=0.13.0",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "chatgpt_proxy/tests"
]

# https://github.com/MagicStack/asyncpg/issues/387
# https://github.com/MagicStack/asyncpg/pull/577
# [[tool.mypy.overrides]]
# module = [
#     "asyncpg.*",
# ]
# ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pypika.*",
    "sanic_testing.*",
    "pytest_loguru.*",
    "aiocache.*",
    "nest_asyncio.*",
    "py_markdown_table.*",
]
ignore_missing_imports = true
